@@ -1,6 +1,7 @@
 import dbaccess
 from datetime import datetime
 import time
+import common
 
 def test_parse_sql():
     expected = ['DROP TABLE IF EXISTS blah',
@@ -158,6 +159,7 @@ def make_timestamp(ts):
     ts = time.mktime(d.timetuple())
     return int(ts)
 
+
 def test_get_links_out_timerange():
     tstart = make_timestamp('2016-06-21 17:10')
     tend = make_timestamp('2016-06-21 18:05')
@@ -178,3 +180,129 @@ def test_get_links_out_timerange():
     assert len(rows) == 3
     rows = dbaccess.get_links_out(21, 66, timerange=time_tiny)
     assert len(rows) == 3
+
+
+def test_get_details():
+    details = dbaccess.get_details(21)
+    assert details['unique_in'] == 9311
+    assert details['unique_out'] == 468
+    assert details['unique_ports'] == 94
+    assert len(details['conn_in']) == 50
+    assert len(details['conn_out']) == 50
+    assert len(details['ports_in']) == 50
+
+    details = dbaccess.get_details(21, 66)
+    assert details['unique_in'] == 9311
+    assert details['unique_out'] == 468
+    assert details['unique_ports'] == 94
+    assert len(details['conn_in']) == 50
+    assert len(details['conn_out']) == 50
+    assert len(details['ports_in']) == 50
+
+    details = dbaccess.get_details(21, 66, 10)
+    assert details['unique_in'] == 2503
+    assert details['unique_out'] == 1
+    assert details['unique_ports'] == 38
+    assert len(details['conn_in']) == 50
+    assert len(details['conn_out']) == 1
+    assert len(details['ports_in']) == 38
+
+    details = dbaccess.get_details(21, 66, 10, 70)
+    assert details['unique_in'] == 16
+    assert details['unique_out'] == 0
+    assert details['unique_ports'] == 13
+    assert len(details['conn_in']) == 31
+    assert len(details['conn_out']) == 0
+    assert len(details['ports_in']) == 13
+
+    details = dbaccess.get_details(21, 66, 40, 231)
+    assert details['unique_in'] == 7
+    assert details['unique_out'] == 4
+    assert details['unique_ports'] == 1
+    assert len(details['conn_in']) == 7
+    assert len(details['conn_out']) == 9
+    assert len(details['ports_in']) == 1
+
+
+def test_get_node_info():
+    assert dbaccess.get_node_info(21) == {}
+
+
+def test_set_node_info():
+    # get old info
+    # set some new random
+    # assert info was recorded.
+    # reset old info
+    assert dbaccess.get_node_info(21) == {}
+
+
+def test_get_port_info_present():
+    port_info = list(dbaccess.get_port_info(80))
+    assert len(port_info) == 1
+    info = port_info[0]
+    assert info.name == 'http'
+    assert info.description == 'World Wide Web HTTP'
+    assert info.port == 80
+    assert sorted(info.keys()) == ['active', 'alias_description', 'alias_name', 'description', 'name', 'port']
+
+def test_get_port_info_absent():
+    port_info = list(dbaccess.get_port_info(4))
+    assert port_info == []
+
+def test_get_port_info_many():
+    port_info = list(dbaccess.get_port_info([3, 4, 5, 6]))
+    assert len(port_info) == 2
+    info3 = port_info[0]
+    info5 = port_info[1]
+    assert info3.port == 3
+    assert info3.name == 'compressne'
+    assert info5.port == 5
+    assert info5.name == 'rje'
+
+
+def test_set_port_info():
+    test_port = 1
+    try:
+        # set data for port 1
+        dbaccess.set_port_info({
+            'port': test_port,
+            'alias_name': "override",
+            'alias_description': "lorem ipsum",
+            'active': '0'
+        })
+        pinfo = list(dbaccess.get_port_info(test_port))
+        assert len(pinfo) == 1
+        assert pinfo[0]['name'] == "tcpmux"
+        assert pinfo[0]['description'] == "TCP Port Service Multiplexer"
+        assert pinfo[0]['alias_name'] == "override"
+        assert pinfo[0]['alias_description'] == "lorem ipsum"
+        assert pinfo[0]['active'] == 0
+    except AssertionError as e:
+        raise e
+    finally:
+        # clear data for test_port
+        common.db.update("portLUT", where="port={0}".format(test_port), active=1)
+        common.db.delete("portAliasLUT", where="port={0}".format(test_port))
+
+    test_port = 4
+    try:
+        # set data for port 4
+        dbaccess.set_port_info({
+            'port': test_port,
+            'alias_name': "this_name_is_too_long",
+            'alias_description': "phony port details",
+            'active': '0'
+        })
+        pinfo = list(dbaccess.get_port_info(test_port))
+        assert len(pinfo) == 1
+        assert pinfo[0]['name'] == ""
+        assert pinfo[0]['description'] == ""
+        assert pinfo[0]['alias_name'] == "this_name_"
+        assert pinfo[0]['alias_description'] == "phony port details"
+        assert pinfo[0]['active'] == 0
+    except AssertionError as e:
+        raise e
+    finally:
+        # clear data for test_port
+        common.db.delete("portLUT", where="port={0}".format(test_port))
+        common.db.delete("portAliasLUT", where="port={0}".format(test_port))
